--- a/rvu/pyproject.toml
+++ b/rvu/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "Recursive Verified Unlearning reference implementation"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = ["pyyaml>=6.0"]
+dependencies = []
 
 [project.optional-dependencies]
 bench = [
